--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -46,9 +47,6 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="MDQ-oG-Htn"/>
-                    <connections>
-                        <segue destination="FTQ-G1-N2b" kind="presentation" identifier="loginSegue" id="CHf-4w-b5m"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hKJ-HH-8tn" sceneMemberID="firstResponder"/>
             </objects>
@@ -63,7 +61,7 @@
                         <viewControllerLayoutGuide type="bottom" id="pGj-sa-aq5"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="qax-2F-Vhk">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Welcome!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="77K-lf-nGe">
@@ -73,6 +71,111 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hDI-Zg-2Q2">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetCell" rowHeight="185" id="uYz-Pm-61P" customClass="TweetCell">
+                                        <rect key="frame" x="0.0" y="24.5" width="375" height="185"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="uYz-Pm-61P" id="7EJ-2Z-rIA">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="185"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CgB-X7-mab">
+                                                    <rect key="frame" x="8" y="8" width="82" height="79"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="79" id="7Xp-Vi-GaT"/>
+                                                        <constraint firstAttribute="width" constant="82" id="RwT-1j-QmZ"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sc7-eh-5hv">
+                                                    <rect key="frame" x="98" y="11" width="78.5" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="tweet" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Aog-82-HtX">
+                                                    <rect key="frame" x="98" y="40" width="253" height="94"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="handle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NSB-VR-5MU">
+                                                    <rect key="frame" x="188" y="11" width="52" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lPq-c0-ttZ">
+                                                    <rect key="frame" x="248" y="11" width="34" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="60f-dS-p2o">
+                                                    <rect key="frame" x="148" y="148" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="favor-icon" translatesAutoresizingMaskIntoConstraints="NO" id="vnc-XC-tG2">
+                                                    <rect key="frame" x="211" y="142" width="30" height="34"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZUz-Fk-ZAi">
+                                                    <rect key="frame" x="251" y="148" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="retweet-icon" translatesAutoresizingMaskIntoConstraints="NO" id="gme-5Y-I5F">
+                                                    <rect key="frame" x="110" y="142" width="30" height="32"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="CgB-X7-mab" firstAttribute="top" secondItem="7EJ-2Z-rIA" secondAttribute="top" constant="8" id="2C9-Wx-Y6K"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="60f-dS-p2o" secondAttribute="bottom" constant="5" id="4qN-p0-k7M"/>
+                                                <constraint firstItem="60f-dS-p2o" firstAttribute="top" secondItem="Aog-82-HtX" secondAttribute="bottom" constant="14" id="5dh-Yx-hvT"/>
+                                                <constraint firstItem="60f-dS-p2o" firstAttribute="leading" secondItem="gme-5Y-I5F" secondAttribute="trailing" constant="8" symbolic="YES" id="8Rt-8w-ztQ"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="Aog-82-HtX" secondAttribute="trailing" constant="8" id="91A-lx-YTo"/>
+                                                <constraint firstItem="lPq-c0-ttZ" firstAttribute="top" secondItem="7EJ-2Z-rIA" secondAttribute="topMargin" id="9vK-pb-Lm1"/>
+                                                <constraint firstItem="NSB-VR-5MU" firstAttribute="top" secondItem="7EJ-2Z-rIA" secondAttribute="topMargin" id="BnD-PL-faG"/>
+                                                <constraint firstItem="Aog-82-HtX" firstAttribute="top" secondItem="lPq-c0-ttZ" secondAttribute="bottom" constant="8" symbolic="YES" id="CWc-WJ-BeR"/>
+                                                <constraint firstItem="lPq-c0-ttZ" firstAttribute="leading" secondItem="NSB-VR-5MU" secondAttribute="trailing" constant="8" symbolic="YES" id="IF1-gu-Xij"/>
+                                                <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="Aog-82-HtX" secondAttribute="bottom" constant="40" id="ItC-CX-MeC"/>
+                                                <constraint firstItem="sc7-eh-5hv" firstAttribute="leading" secondItem="CgB-X7-mab" secondAttribute="trailing" constant="8" id="IzW-6b-I4R"/>
+                                                <constraint firstItem="ZUz-Fk-ZAi" firstAttribute="top" secondItem="Aog-82-HtX" secondAttribute="bottom" constant="14" id="MRh-Rd-HfC"/>
+                                                <constraint firstItem="Aog-82-HtX" firstAttribute="top" secondItem="sc7-eh-5hv" secondAttribute="bottom" constant="8" id="MY7-Cc-NU6"/>
+                                                <constraint firstItem="NSB-VR-5MU" firstAttribute="leading" secondItem="sc7-eh-5hv" secondAttribute="trailing" constant="11.5" id="QT8-zh-u14"/>
+                                                <constraint firstItem="gme-5Y-I5F" firstAttribute="top" secondItem="Aog-82-HtX" secondAttribute="bottom" constant="8" symbolic="YES" id="Tp5-UT-39e"/>
+                                                <constraint firstItem="CgB-X7-mab" firstAttribute="leading" secondItem="7EJ-2Z-rIA" secondAttribute="leading" constant="8" id="W8a-gA-5E6"/>
+                                                <constraint firstItem="vnc-XC-tG2" firstAttribute="top" secondItem="Aog-82-HtX" secondAttribute="bottom" constant="8" symbolic="YES" id="XPS-x2-nxk"/>
+                                                <constraint firstItem="Aog-82-HtX" firstAttribute="leading" secondItem="CgB-X7-mab" secondAttribute="trailing" constant="8" id="bPL-7O-uKI"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="ZUz-Fk-ZAi" secondAttribute="bottom" constant="5" id="d4F-76-5bA"/>
+                                                <constraint firstItem="Aog-82-HtX" firstAttribute="top" secondItem="NSB-VR-5MU" secondAttribute="bottom" constant="8" symbolic="YES" id="dI2-NH-fPc"/>
+                                                <constraint firstItem="gme-5Y-I5F" firstAttribute="bottom" secondItem="7EJ-2Z-rIA" secondAttribute="bottomMargin" id="deH-Bd-Tpn"/>
+                                                <constraint firstItem="vnc-XC-tG2" firstAttribute="leading" secondItem="60f-dS-p2o" secondAttribute="trailing" constant="21" id="fA6-9h-LDL"/>
+                                                <constraint firstAttribute="bottom" secondItem="vnc-XC-tG2" secondAttribute="bottom" constant="9" id="jPn-sL-AR7"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="ZUz-Fk-ZAi" secondAttribute="trailing" constant="66" id="mxg-Mu-gUs"/>
+                                                <constraint firstItem="ZUz-Fk-ZAi" firstAttribute="leading" secondItem="vnc-XC-tG2" secondAttribute="trailing" constant="10" id="rSD-LI-x0f"/>
+                                                <constraint firstItem="sc7-eh-5hv" firstAttribute="top" secondItem="7EJ-2Z-rIA" secondAttribute="topMargin" id="x13-1H-jMW"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="favoriteCountLabel" destination="ZUz-Fk-ZAi" id="Z86-fB-A1l"/>
+                                            <outlet property="favoriteIconView" destination="vnc-XC-tG2" id="jE1-Gq-sJT"/>
+                                            <outlet property="pfpView" destination="CgB-X7-mab" id="tES-1o-yVr"/>
+                                            <outlet property="retweetCountLabel" destination="60f-dS-p2o" id="Ic5-2w-huc"/>
+                                            <outlet property="retweetIconView" destination="gme-5Y-I5F" id="d1w-JD-m46"/>
+                                            <outlet property="timestampLabel" destination="lPq-c0-ttZ" id="Rha-lS-Tmg"/>
+                                            <outlet property="tweetTextLabel" destination="Aog-82-HtX" id="9a0-S7-fvY"/>
+                                            <outlet property="usernameHandleLabel" destination="NSB-VR-5MU" id="ZaJ-DZ-YLI"/>
+                                            <outlet property="usernameLabel" destination="sc7-eh-5hv" id="iYB-Ks-tdV"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ugE-Ul-H9I"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -80,7 +183,7 @@
                     <navigationItem key="navigationItem" title="Home Timeline" id="MOc-fV-EZE">
                         <barButtonItem key="leftBarButtonItem" style="plain" id="sjG-DM-ACT">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="IAY-eG-gWM">
-                                <rect key="frame" x="16" y="13" width="83" height="30"/>
+                                <rect key="frame" x="16" y="7" width="83" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <gestureRecognizers/>
                                 <state key="normal" title="Logout"/>
@@ -94,6 +197,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="hDI-Zg-2Q2" id="aWV-PQ-ecr"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oQh-hN-GQg" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="spz-MU-Uva" userLabel="Exit" sceneMemberID="exit"/>
@@ -106,7 +212,7 @@
                 <navigationController storyboardIdentifier="TweetsNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="FTQ-G1-N2b" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="ytz-Ev-cUB">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -121,5 +227,10 @@
     </scenes>
     <resources>
         <image name="TwitterLogoBlue" width="200" height="200"/>
+        <image name="favor-icon" width="30" height="30"/>
+        <image name="retweet-icon" width="30" height="30"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
